# inf265_projects

./: .gitignore  README.md  pyproject.toml
assignments/intro_pytorch/: 01_datasets_and_transforms.ipynb  03_custom_modules.ipynb
assignments/project_1/: backpropagation.ipynb
assignments/src/intro_pytorch/: 02_using_nn_sequential_and_training_loop.ipynb  04_computational_graph.ipynb  05_input_output_shapes_of_layers.ipynb
assignments/src/project_1/: REPORT.md  backpropagation.ipynb  gradient_descent.ipynb  machine_learning_pipelines.ipynb  ml_pipeline.ipynb  tests_backpropagation.py
assignments/src/project_2/: Object_detection copy.ipynb  Object_detection.ipynb  Object_detection_backup.ipynb  Object_detection_template.ipynb  Object_localization.ipynb  README.md  REPORT.md  constants.py  graphing.py  obj_detection.py  questions.md  report.typ  shared_utils.py
assignments/src/project_2/.ipynb_checkpoints/: Object_detection-checkpoint.ipynb  Object_localization-checkpoint.ipynb
assignments/src/project_2/models/: a5b658a347.pt  a9de9350d0.pt
assignments/src/project_2/models/object_detection/: 01994767c5.pt  0317ee79db.pt  0689175ce7.pt  07135e5bc7.pt  07785f335a.pt  0c5ddcc3de.pt  0e1d2463a6.pt  123ac8c96b.pt  19f570103e.pt  1c18ef6c33.pt  2a03ed2827.pt  (+36 more)
assignments/src/project_3/: README.md  report.typ  run.md
assignments/src/project_3/01_encoder_sentiment_classifier/: imdb_sentiment_encoder.ipynb
assignments/src/project_3/02_decoder_chatbot/: chatbot.py  config.py  dataset.py  gpu_training_notebook.ipynb  inference.py  model.py  tokenizer.py  train.py
(+154 files in other folders)
